--- a/src/components/PlayerGrid/style.scss
+++ b/src/components/PlayerGrid/style.scss
@@ -1,8 +1,9 @@
 .playersContainer{
-		width:240px;
+		width:250px;
 		position: absolute;
 		top:20px;
 		right:20px;
+		padding-left:10px;
 		max-width: 30vw;
 		background:white;
 		.fakeMenu{
@@ -15,21 +16,22 @@
 				font-weight: extra-light!important;
 				color:#000;
 				margin:10px;
+				font-size:25px;
 				opacity:0.5;
 			}
 			.gridIcon{
 				opacity:0.5;
 				margin-left:10px;
-				width:21px;
-				height:21px;
+				width:30px;
+				height:30px;
 				display: flex;
 				flex-direction: row;
 				flex-wrap: wrap;
 				.gridIconSquare{
-					width:4px; 
-					height:4px;
+					width:5px; 
+					height:5px;
 					background:#333;
-					margin:1px;
+					margin:2px;
 				}
 			}
 			.profileCircle{
