--- a/src/containers/Host/QuestionHeader/style.scss
+++ b/src/containers/Host/QuestionHeader/style.scss
@@ -1,5 +1,6 @@
 .answersHeaderContainer{
-	height:120px;
+	height:150px;
+	margin-bottom:20px;
 	width:50vw;
 	position: relative;
 	.answersHeaderInner{
@@ -16,7 +17,7 @@
 		}
 		.emoji{
 			position: absolute;
-			top:40px;
+			top:55px;
 			font-size: 40px;
 			line-height: 40px;
 			right:40px;
