--- a/src/containers/Host/style.scss
+++ b/src/containers/Host/style.scss
@@ -1,23 +1,57 @@
 .hostContainer{
 	min-height: 100vh;
 	width:100%;
-	/* background: linear-gradient(to right, #0F2027, #203A43,#2c5364); */
+	 background: linear-gradient(to bottom right, #ffffff,#ffffff); 
 	/* padding:20px; */
 	
 	display: flex;
 	flex:1;
 	flex-direction: row;
+
 	/* h4{
 		opacity:0;
 	} */
 	.hostMainContainer{
+		
 		display: flex;
 		flex:1;
-		align-items: center;
+		padding-top:90px;
+		box-sizing: border-box;
+		// align-items: center;
 		justify-content: center;
 		position: relative;
-		padding:50px 0;
-		background:rgba(255,255,255,0.25);
+		padding-bottom:20px;
+		max-height: 100vh;
+		height:100vh;
+
+		// padding:90px 0;
+		// background:rgba(255,255,255,0.25);
+	}
+
+	.hostPlayersContainer{
+		
+		width:280px;
+		height:100vh;
+		position: relative;
+
+	}
+	.hostBackground{
+		position: fixed;
+		top:0px;
+		left:100px;
+		bottom:0;
+		right:0;
+		background-position: center;
+		background-size:cover;
+		.hostBackgroundOverlay{
+			position: absolute;
+			top:0;
+			left:0;
+			bottom:0;
+			right:0;
+			 background: linear-gradient(to bottom, #ffffffff,#ffffffee,#ffffffdd); 
+
+		}
 	}
 
 }
