--- a/src/components/Player/style.scss
+++ b/src/components/Player/style.scss
@@ -1,29 +1,35 @@
+.hostPlayerOuterContainer{
+	margin:12px 20px;
+	display: block;
+	max-height: 165px;
 .hostPlayerContainer{
 	position: relative;
-	width:100px;
+	width:80px;
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	margin:10px;
+	
 	.playerCircle{
 		overflow: hidden;
-		min-width:100px;
-		width:100px;
-		height:100px;
+		min-width:80px;
+		width:80px;
+		height:80px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		border-radius: 50%;
-		color:white;
-		font-size: 40px;
+		p{
+			color:white;
+			font-size: 40px;
+		}
 		.check{
 			font-size: 65px;
 		}
 	}
 	&.isDisconnected{
 		.name{
-			opacity:0.5;
+			opacity:0.2;
 		}
 	}
 	.score{
@@ -37,4 +43,5 @@
 		width:100%;
 		text-align: center;
 	}
+}
 }
