--- a/src/components/PlayerGrid/style.scss
+++ b/src/components/PlayerGrid/style.scss
@@ -1,16 +1,16 @@
 .playersContainer{
-		width:250px;
+		width:100%;
 		position: absolute;
 		top:20px;
 		right:20px;
-		padding-left:10px;
-		max-width: 30vw;
-		background:white;
+		bottom:20px;
+		left:20px;
+		/* height:100vh; */
+		// background:white;
 		.fakeMenu{
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			justify-content: flex-end;
 			margin-bottom:10px;
 			.fakeMenuItem{
 				font-weight: extra-light!important;
@@ -50,22 +50,40 @@
 		.playersInnerChevron{
 			position: absolute;
 			top:-10px;
-			right:52px;;
+			right:55px;;
 			width: 0; 
 		  height: 0; 
 		  border-left: 10px solid transparent;
 		  border-right: 10px solid transparent;
-		  
 		  border-bottom: 10px solid white;
 		}
-		.playersInner{
-			padding-top:5px;
-			position: relative;
+		.playersModalBackground{
+			border-radius:4px;
+			background:white;
+			position: absolute;
+			top:70px;
+			left:0px;
+			bottom:0px;
+			right:40px;
 			box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
-			display: flex;
-			flex-direction: row;
-			flex-wrap:wrap;
 			
+			
+
+			.playersInner{
+				padding:10px 0;
+				justify-content: center;
+				display: flex;
+				flex-direction: row;
+				flex-wrap:wrap;
+			}
+			
+		}
+		.filler{
+			flex:1;
+			width:100%;
+			background:red;
+			position: absolute;
+
 		}
 		
 	}
