--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -2,4 +2,14 @@
 
 .home{
 	// background:red;
+	display: flex;
+	flex:1;
+	flex-direction: column;
+	height:100vh;
+	.section{
+		display: flex;
+		flex:1;
+		align-items: center;
+		justify-content: center;
+	}
 }
