--- a/src/containers/Host/End/style.scss
+++ b/src/containers/Host/End/style.scss
@@ -2,9 +2,22 @@
 	.finalPlayerOuterContainer{
 		display: flex;
 		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		flex-wrap: wrap;
 		h4{
 			color:#000;
 			
+		}
+	}
+	.finalPlayerInnerContainer{
+		opacity:0;
+		transform: translateY(50px);
+		margin:30px;
+		transition:all 0.3s ease;
+		&.isVisible{
+			opacity:1;
+			transform: translateY(0px);			
 		}
 	}
 }
