--- a/src/containers/Host/PageTitle/style.scss
+++ b/src/containers/Host/PageTitle/style.scss
@@ -2,28 +2,11 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	.roomCodeContainer{
-		/* border: 1px solid black; */
-		box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
-		padding: 5px 20px 10px 30px;
-		border-radius: 30px;
-		margin-top:60px;
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		justify-content: center;
-		img{
-			margin-top:5px;
-			margin-left:20px;
-			height:33px;
-			width:auto;
-		}
-		.roomCode{
-			color:black;
-			letter-spacing:0.5px;;
-			font-size: 30px!important;
-		}
-	}
+	// padding:50px;
+	// background:white;
+	// box-shadow:0px 0px 20px rgba(0,0,0,0.3);
+	border-radius:10px;
+	
 	/* .titleContainer{
 		display: flex;
 		flex-direction: row;
@@ -44,6 +27,7 @@
 		flex-direction: row;
 		margin-top:45px;
 		.luckyButton{
+			// background:white;
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -54,10 +38,15 @@
 				color:#5F6368;
 				font-size: 20px;
 			}
-			background:linear-gradient(top,#f5f5f5,#f1f1f1);
+			background:white;
 			padding:0 16px;
 			height:40px;
 			border-radius:4px;
 		}
+	}
+	transition:all 0.3s ease;
+	&.out{
+		transform: translateY(300);
+		opacity:0;
 	}
 }
