--- a/src/containers/Host/Question/style.scss
+++ b/src/containers/Host/Question/style.scss
@@ -1,66 +1,127 @@
 .questionContainer{
+	.countdown{
+		position: fixed;
+		top:20px;
+		left:20px;
+		font-weight: extra-light!important;
+		color:#000;
+		margin:10px;
+		font-size:25px;
+		opacity:0.5;
+	}
+	
+
 	display: flex;
-	flex-direction: column;
-	width:100%;
+	flex-direction: row;
+	max-width: 100%;
 	flex:1;
+
 	/* max-width:600px; */
 	/* background:red; */
 	/* margin:auto; */
-	position: absolute;
-	top:0px;
-	bottom:0px;
-	left:0;
-	padding:0px 20px 50px 20px;
+	
+	/* padding:0px 20px 0px 20px; */
 	/* max-width: 70vw; */
-	align-items: center;
 	justify-content: center;
+	padding:0 0px 0 20px;
+	box-sizing: border-box;
+	/* justify-content: center; */
 	z-index: 100000;
-	.questionShadowContainer{
-		margin-top:25px;
-		width:50vw;
-		box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
-		border-radius: 30px;
-		padding-bottom:30px;
-		background:white;
 
+
+	.responseContainer{
+		position: absolute;
+		top:95px;
+		left:20px;
+		align-items: center;
+		justify-content: center;
+		right:20px;
+		display: flex;
+		flex-direction: row;
+		.responseIndicator{
+			margin:0 20px;
+			color:#000;
+			font-size: 20px;
+		}
+	}
+	.questionAndAnswerContainer{
+		display: flex;
+		flex:1;
+		flex-direction: column;
+	}
+	.questionShadowContainer{
+		/* margin-top:25px; */
+		width:100%;
+		height:100%;
+		box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+		border-radius: 4px;
+		background:white;
 	}
 		.questionInnerContainer{
-			background:white;
+			/* background:white; */
+			margin-top:-20px;
 			width:100%;
 			display: flex;
-			align-items: center;
-			height:60px;
+			justify-content: center;
+			/* align-items: center; */
+			/* height:160px; */
+			margin-bottom:50px;
+			margin:auto;
+			padding:20px;
+			padding-bottom:80px;
+			margin-top:-50px;
 			/* margin:20px 0 0 0; */
-			border-radius: 30px 30px 0 0;
+			/* border-radius: 30px 30px 0 0; */
 			text-align: center!important;
 			position: relative;
-			padding:20px;
+			
 			.question{
 				color:#000;
 				font-weight: extra-light!important;
 				font-size:30px;
 			}
-			.underline{
-				position: absolute;
-				bottom:0;
-				left:20px;
-				right:20px;
-				height:1px;
-				background:#f2f2f2;
-			}
+			
 		}
 	
 	.hostHintsContainer{
 		
 		z-index: 100;
 		display: flex;
+		width:100%;
 		flex:1;
 		flex-direction: column;
+		
 		.hostHintContainer{
-			padding:0 20px;
+			position: relative;
+			opacity:0;
+			transition: transform 0.3s ease, opacity 0.3s ease 0.1s;
+			transform: translateX(50px);
+			&.isVisible{
+				opacity:1;
+				transform: translateX(0px);
+			}
+			.answerScoreContainer{
+				position: absolute;
+				right:20px;
+				top:10px;
+				display: flex;
+				flex-direction: row;
+				.answerScore{
+					color:#676767;
+					opacity: 0.5;
+					font-size: 20px;
+				}
+				.playerInAnswer{
+					margin-right:10px;
+					color:#676767;
+					opacity: 1;
+					font-size: 20px;
+				}
+				
+			}
 			display: block;
 			flex-direction: row;
-			padding:5px 20px;
+			padding:0px 20px 10px 20px;
 			&.grey{
 				background:#f2f2f2;
 			}
@@ -72,7 +133,6 @@
 				height:30px;
 				padding:5px;
 				line-height: 30px;
-
 				color:#676767;
 				.undiscovered{
 					color:#DB4437
@@ -80,7 +140,6 @@
 			}
 			.hintLetter{
 				height:30px;
-
 				display: inline-block;
 				font-size: 30px;
 				margin-right:4px;
@@ -96,5 +155,8 @@
 	}
 	.undiscovered{
 		color:#DB4437!important;
+	}
+	.playerInAnswer{
+		color:#000;
 	}
 }
