--- a/src/containers/Host/QuestionHeader/style.scss
+++ b/src/containers/Host/QuestionHeader/style.scss
@@ -1,28 +1,21 @@
 .answersHeaderContainer{
-	height:150px;
+	
 	margin-bottom:20px;
-	width:50vw;
+	box-shadow: 0px 0px 20px rgba(0,0,0,0.3);	
 	position: relative;
-	.answersHeaderInner{
-		display: flex;
-		flex-direction: row;
-		align-items: center;
-		/* justify-content: center; */
-		h4{
-			color:#000;
-		}
-		.answerTitle{
-			opacity:0.5;
-			margin: 0px 5px 0 20px;
-		}
-		.emoji{
-			position: absolute;
-			top:55px;
-			font-size: 40px;
-			line-height: 40px;
-			right:40px;
-		}
+	background:white;
+	transition:all 0.3s ease;
+	width:0;
+	overflow: hidden;
+	height:100%;
+	margin-right:20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	&.isVisible{
+		width:400px;
 	}
+
 	
 	/*background:red;*/
 
