--- a/src/containers/Host/QuestionInput/style.scss
+++ b/src/containers/Host/QuestionInput/style.scss
@@ -1,12 +1,14 @@
 .hostQuestionInputContainer{
-	width:100%;
-	height:100vh;
+	
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	
 	flex-direction: column;
-	margin-top:-50px;
+	// margin-top:-50px;
+	
 	.instructions{
 		color:#000;
+		font-size:50px;
+
 	}
 }
