--- a/src/index.scss
+++ b/src/index.scss
@@ -8,9 +8,13 @@ html{
 	padding:0;
 }
 
-.appContainers{
+/* .appContainers{
 	max-height:100vh;
 	max-width:100vw;
 	overflow: hidden;
 	z-index: -1;
+} */
+
+.error{
+	color:#dd1010!important;
 }
