--- a/src/components/InputStyleText/style.scss
+++ b/src/components/InputStyleText/style.scss
@@ -1,24 +1,59 @@
 .inputStyleTextContainer{
 		/* border: 1px solid black; */
+		opacity:0;
 		box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
 		padding: 5px 20px 10px 30px;
 		border-radius: 30px;
-		margin-top:60px;
+		/* margin-top:60px; */
 		display: flex;
 		flex-direction: row;
 		align-items: center;
 		justify-content: center;
 		background:white;
-		img{
+		margin-top:30px;
+		overflow: hidden;
+		.inputText{
+			font-weight: bold!important;
+			color:black;
+			letter-spacing:0.5px;
+			font-size: 30px!important;
+			transform: translateY(-100%);
+			
+			opacity:0;
+			transition:all 0.3s ease, opacity 0.3s ease;
+		}
+		&.correct{
+			background:#0F9D58;
+
+			.inputText{
+				transition: none;
+				color:white;
+			}
+		}
+		&.incorrect{
+			background:#DB4437;
+			.inputText{
+				transition: none;
+				color:white;
+			}
+		}	
+		.image{
+			font-size:33px;
+			line-height: 33px;
 			margin-top:5px;
 			margin-left:20px;
 			height:33px;
 			width:auto;
 		}
-		.text{
+		
+		&.inputContainerExpanded{
+			transition:opacity 0.3s ease 0.3s;		
+			opacity:1;
+			.inputText{
 
-			color:black;
-			letter-spacing:0.5px;;
-			font-size: 30px!important;
+				opacity:1;
+				transform: translateY(0%);
+
+			}
 		}
 	}
