--- a/src/containers/Host/style.scss
+++ b/src/containers/Host/style.scss
@@ -19,10 +19,11 @@
 		box-sizing: border-box;
 		// align-items: center;
 		justify-content: center;
-		position: relative;
 		padding-bottom:20px;
 		max-height: 100vh;
 		height:100vh;
+		position: relative;
+		/* overflow: hidden; */
 
 		// padding:90px 0;
 		// background:rgba(255,255,255,0.25);
