--- a/src/containers/Host/End/style.scss
+++ b/src/containers/Host/End/style.scss
@@ -1,10 +1,19 @@
 .hostEndContainer{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex:1;
+	margin-top:-100px;
 	.finalPlayerOuterContainer{
+		margin-top:50px;
 		display: flex;
 		flex-direction: row;
-		align-items: center;
+		/* align-items: center; */
+		
 		justify-content: center;
 		flex-wrap: wrap;
+		
 		h4{
 			color:#000;
 			
