--- a/src/containers/Host/PageTitle/style.scss
+++ b/src/containers/Host/PageTitle/style.scss
@@ -2,51 +2,15 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	// padding:50px;
-	// background:white;
-	// box-shadow:0px 0px 20px rgba(0,0,0,0.3);
-	border-radius:10px;
 	
-	/* .titleContainer{
-		display: flex;
-		flex-direction: row;
-		letter-spacing:0.5px;;
-		
-		opacity:1!important;
-		.letterTitle{
-			font-size: 80px;
-			font-weight: light!important;
-			opacity:1!important;
-		}
-		.space{
-				width:10px;
-		}
-	} */
-	.luckyButtonsContainer{
-		display: flex;
-		flex-direction: row;
-		margin-top:45px;
-		.luckyButton{
-			// background:white;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			margin: 0px 5px;
-			p{
-				margin-top:-2px;
-				font-weight: extra-light!important;
-				color:#5F6368;
-				font-size: 20px;
-			}
-			background:white;
-			padding:0 16px;
-			height:40px;
-			border-radius:4px;
-		}
-	}
+	border-radius:10px;
+	justify-content: center;
+	height:100%;
+	margin-top:-80px;
+	
 	transition:all 0.3s ease;
 	&.out{
-		transform: translateY(300);
+		transform: translateY(300px);
 		opacity:0;
 	}
 }
