--- a/src/containers/Host/Question/style.scss
+++ b/src/containers/Host/Question/style.scss
@@ -30,6 +30,7 @@
 
 
 	.responseContainer{
+		overflow: hidden;
 		position: absolute;
 		top:95px;
 		left:20px;
@@ -50,16 +51,21 @@
 		flex-direction: column;
 	}
 	.questionShadowContainer{
+
 		/* margin-top:25px; */
 		width:100%;
-		height:100%;
+		height:0;
+		transition: all 0.3s ease;
 		box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
 		border-radius: 4px;
 		background:white;
+		&.isVisible{
+			height:100%;
+		}
 	}
 		.questionInnerContainer{
 			/* background:white; */
-			margin-top:-20px;
+			margin-top:-50px;
 			width:100%;
 			display: flex;
 			justify-content: center;
@@ -75,10 +81,9 @@
 			text-align: center!important;
 			position: relative;
 			
-			.question{
-				color:#000;
-				font-weight: extra-light!important;
-				font-size:30px;
+			.questionController{
+				margin-top:-30px;
+				
 			}
 			
 		}
@@ -90,22 +95,30 @@
 		width:100%;
 		flex:1;
 		flex-direction: column;
+		/* overflow: hidden; */
 		
 		.hostHintContainer{
+			overflow: hidden;
 			position: relative;
+			height:50px;
 			opacity:0;
 			transition: transform 0.3s ease, opacity 0.3s ease 0.1s;
-			transform: translateX(50px);
+			transform: translateX(-50px);
 			&.isVisible{
 				opacity:1;
 				transform: translateX(0px);
 			}
 			.answerScoreContainer{
 				position: absolute;
-				right:20px;
-				top:10px;
+				right:0px;
+				top:0px;
+				bottom:0;
+				align-items: center;
+				padding-right:20px;
+				padding-left:30px;
 				display: flex;
 				flex-direction: row;
+				background: linear-gradient(to right, #ffffff00, #ffffffff,#ffffffff,#ffffffff,#ffffffff);
 				.answerScore{
 					color:#676767;
 					opacity: 0.5;
@@ -124,16 +137,22 @@
 			padding:0px 20px 10px 20px;
 			&.grey{
 				background:#f2f2f2;
+				.answerScoreContainer{
+				background: linear-gradient(to right, #f2f2f200, #f2f2f2ff,#f2f2f2ff,#f2f2f2ff,#f2f2f2ff);
+				}
 			}
 			/* margin:3px 0px; */
 			.revealedAnswer{
+				/* width:100000px; */
 				display: inline-block;
 				font-size: 30px;
 				margin-right:4px;
-				height:30px;
+				max-height:30px;
+
 				padding:5px;
-				line-height: 30px;
+				line-height: 40px;
 				color:#676767;
+				letter-spacing: 1px;
 				.undiscovered{
 					color:#DB4437
 				}
