--- a/src/containers/Host/QuestionHeader/Response/style.scss
+++ b/src/containers/Host/QuestionHeader/Response/style.scss
@@ -5,17 +5,28 @@
 		justify-content: center;
 		opacity:0;
 		transition: all 0.3s ease;
-		transform: translateY(50px);
+		
+		width:100%;
+		height:100%;
+		
+		.answerTitle{
+			transition: all 0.3s ease;
+			transform: translateY(50px);
+			opacity:0.5;
+			margin: 0px 5px 0 20px;
+		}
 		&.isAnimated{
 			opacity:1;
-			transform: translateY(0px);
+			.answerTitle{
+				transform: translateY(0px);
+			}
 		}
 		h4{
 			color:#000;
 		}
-		.answerTitle{
-			opacity:0.5;
-			margin: 0px 5px 0 20px;
+
+		.answerPlayerName{
+			margin-bottom:20px;
 		}
 		.emoji{
 			margin-top:80px;
