--- a/src/containers/Host/QuestionInput/style.scss
+++ b/src/containers/Host/QuestionInput/style.scss
@@ -2,9 +2,9 @@
 	
 	display: flex;
 	align-items: center;
-	
+	justify-content: center;
 	flex-direction: column;
-	// margin-top:-50px;
+	margin-top:-100px;
 	
 	.instructions{
 		color:#000;
