--- a/src/containers/Host/Instructions/style.scss
+++ b/src/containers/Host/Instructions/style.scss
@@ -1,5 +1,6 @@
 .instructionContainer{
 	position: relative;
+	overflow: hidden;
 	.instructions{
 		position: absolute;
 		top:0;
@@ -12,18 +13,21 @@
 		flex-direction: column;
 		z-index: 100000;
 		
-		.instruction{
-			font-size: 30px;
-			color:#676767;
-			transition: all 0.3s ease;
-			opacity:1;
-			&.out{
-			opacity:0;
-			transform:translateY(10px);
-		}
+			.instruction{
+				font-size: 30px;
+				color:#676767;
+				transition: all 0.3s ease;
+				opacity:1;
+				&.out{
+				opacity:0;
+				transform:translateY(10px);
+			}
 		}
 		
 
+	}
+	video{
+		max-width: 100%;
 	}
 
 }
