--- a/src/containers/Host/Question/style.scss
+++ b/src/containers/Host/Question/style.scss
@@ -1,4 +1,9 @@
 .questionContainer{
+	// padding:0 280px 20px 20px;
+	padding: 0 20px;
+	// max-width:800px;
+	padding: 0 20px 0 20px;
+	box-sizing:border-box;
 	.countdown{
 		position: fixed;
 		top:20px;
@@ -13,7 +18,7 @@
 
 	display: flex;
 	flex-direction: row;
-	max-width: 100%;
+	// max-width: 100%;
 	flex:1;
 
 	/* max-width:600px; */
@@ -23,20 +28,21 @@
 	/* padding:0px 20px 0px 20px; */
 	/* max-width: 70vw; */
 	justify-content: center;
-	padding:0 0px 0 20px;
+	// padding:0 0px 0 20px;
 	box-sizing: border-box;
 	/* justify-content: center; */
 	z-index: 100000;
 
 
 	.responseContainer{
+
 		overflow: hidden;
 		position: absolute;
 		top:95px;
 		left:20px;
 		align-items: center;
 		justify-content: center;
-		right:20px;
+		right:300px;
 		display: flex;
 		flex-direction: row;
 		.responseIndicator{
@@ -56,9 +62,9 @@
 		width:100%;
 		height:0;
 		transition: all 0.3s ease;
-		box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+		// box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
 		border-radius: 4px;
-		background:white;
+		// background:white;
 		&.isVisible{
 			height:100%;
 		}
