--- a/src/components/PlayerGrid/style.scss
+++ b/src/components/PlayerGrid/style.scss
@@ -5,7 +5,7 @@
 		right:20px;
 		bottom:20px;
 		left:20px;
-		/* height:100vh; */
+		 // height:100vh; 
 		// background:white;
 		.fakeMenu{
 			display: flex;
