--- a/src/containers/Host/QuestionHeader/Response/style.scss
+++ b/src/containers/Host/QuestionHeader/Response/style.scss
@@ -4,11 +4,14 @@
 		align-items: center;
 		justify-content: center;
 		opacity:0;
+		transform: translateY(30px);
 		transition: all 0.3s ease;
-		
+		padding: 0 20px 40px 20px;
 		width:100%;
 		height:100%;
-		
+			box-shadow: 0px 0px 20px rgba(0,0,0,0.3);	
+	// position: relative;
+	background:white;
 		.answerTitle{
 			transition: all 0.3s ease;
 			transform: translateY(50px);
@@ -16,6 +19,7 @@
 			margin: 0px 5px 0 20px;
 		}
 		&.isAnimated{
+			transform:translateY(0);
 			opacity:1;
 			.answerTitle{
 				transform: translateY(0px);
