--- a/src/containers/Host/QuestionHeader/style.scss
+++ b/src/containers/Host/QuestionHeader/style.scss
@@ -1,19 +1,38 @@
 .answersHeaderContainer{
 	
-	margin-bottom:20px;
-	box-shadow: 0px 0px 20px rgba(0,0,0,0.3);	
-	position: relative;
-	background:white;
+	// margin-bottom:20px;
+	
+	// padding:20px;
+	// transition:all 0.3s ease;
+	// width:0;
+	// overflow: hidden;
+	// height:100%;
+	// margin-right:20px;
+	// display: flex;
+	// align-items: center;
+	// justify-content: center;
+
 	transition:all 0.3s ease;
-	width:0;
-	overflow: hidden;
-	height:100%;
-	margin-right:20px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	&.isVisible{
 		width:400px;
+		position: absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+	z-index: 10000000;
+	width:400px;
+	height:300px;
+	background:transparent;
+	box-shadow: 0px 0px 20px rgba(0,0,0,0);	
+	&.isVisible{
+	
+		width:400px;
+		position: absolute;
+	top:50%;
+	left:50%;
+	transform:translate(-50%,-50%);
+	z-index: 10000000;
+	width:400px;
+	height:300px;
 	}
 
 	
