--- a/src/components/PlayerGrid/style.scss
+++ b/src/components/PlayerGrid/style.scss
@@ -7,6 +7,13 @@
 		left:20px;
 		 // height:100vh; 
 		// background:white;
+		.noPlayers{
+			font-size:30px;
+			text-align: center;
+			color:#000;
+			opacity: 0.25;
+			padding:0 20px 40px 20px;
+		}
 		.fakeMenu{
 			display: flex;
 			flex-direction: row;
@@ -70,6 +77,8 @@
 			
 
 			.playersInner{
+				box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
+				background:white;
 				padding:10px 0;
 				justify-content: center;
 				display: flex;
