--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -9,6 +9,13 @@
 	pointer-events:auto;
 	box-shadow: 0px 0px 20px rgba(0,0,0,0.2);
 	cursor:pointer;
+	&.danger{
+		width:100%;
+		display: flex;
+		margin-top:30px;
+		align-items:center;
+		background:#DB4437;
+	}
 	p{
 		margin-top:-2px;
 		line-height: 50px;
