--- a/src/containers/Player/AnswerInput/style.scss
+++ b/src/containers/Player/AnswerInput/style.scss
@@ -2,11 +2,11 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	p{
-		font-weight: extra-light;
-		font-size: 20px;
-		margin-top:20px;
-		color:#888;
-		text-align: center;
-	}
+	// p{
+	// 	font-weight: extra-light;
+	// 	font-size: 20px;
+	// 	margin-top:20px;
+	// 	color:#888;
+	// 	text-align: center;
+	// }
 }
