--- a/src/containers/Host/Question/style.scss
+++ b/src/containers/Host/Question/style.scss
@@ -150,6 +150,7 @@
 			display: block;
 			flex-direction: row;
 			padding:0px 20px 10px 20px;
+			background:#fff;
 			&.grey{
 				background:#f2f2f2;
 				.answerScoreContainer{
