--- a/src/components/Player/style.scss
+++ b/src/components/Player/style.scss
@@ -14,7 +14,7 @@
 	}
 .hostPlayerContainer{
 	&.large{
-		margin-top:-100px;
+		margin-top:-150px;
 	}
 	&.hideName{
 		margin-top:0;
@@ -37,6 +37,9 @@
 		align-items: center;
 		justify-content: center;
 		border-radius: 50%;
+		&.disconnected{
+			border:9px solid red;
+		}
 		&.large{
 			box-shadow: 0 0 20px rgba(0,0,0,0.3);
 			margin-bottom:20px;
@@ -58,10 +61,10 @@
 	}
 	.score{
 		color:#000;
-		font-size: 25px;
+		font-size: 30px;
 	}
 	.name{
-		font-size: 25px;
+		font-size: 30px;
 		color:#000;
 		font-weight:bold;
 		width:100%;
