--- a/src/components/PlayerGrid/style.scss
+++ b/src/components/PlayerGrid/style.scss
@@ -10,9 +10,10 @@
 		.noPlayers{
 			font-size:30px;
 			text-align: center;
+			width:100%;
 			color:#000;
 			opacity: 0.25;
-			padding:20px 20px 40px 20px;
+			padding:40px 20px;
 		}
 		.fakeMenu{
 			display: flex;
@@ -72,6 +73,7 @@
 			left:0px;
 			// bottom:0px;
 			right:40px;
+			border-radius:5px;
 			box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
 			opacity:0;
 			// overflow:hidden;
@@ -82,8 +84,15 @@
 
 				opacity:1;
 			}
-
+			.modalInfo{
+				color:#000;
+				opacity:0.25;
+				text-align: center;
+				font-size:20px;
+				width:100%;
+			}
 			.playersInner{
+				border-radius:5px;
 				box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
 				background:white;
 				padding:10px 0;
