--- a/src/containers/Host/Question/style.scss
+++ b/src/containers/Host/Question/style.scss
@@ -1,18 +1,34 @@
 .questionContainer{
 	// padding:0 280px 20px 20px;
-	padding: 0 20px;
+	padding:0px ;
 	// max-width:800px;
-	padding: 0 0px 0 20px;
+	
 	box-sizing:border-box;
 	.countdown{
+		padding:10px;
+		color:white;
+		background:red;
 		position: fixed;
-		top:20px;
+		top:10px;
 		left:20px;
 		font-weight: extra-light!important;
-		color:#000;
+		border-radius:30px;
 		margin:10px;
+		
 		font-size:25px;
-		opacity:0.5;
+		transition:background 50s ease;
+		width:158px;
+		padding-left:21px;
+		&.red{
+			background: #DB4437; 
+		}
+		&.yellow{
+			background: #F4B400;
+		}
+		&.green{
+			background:#0F9D58;
+		}
+		// opacity:0.5;
 	}
 	
 
@@ -71,7 +87,7 @@
 	}
 		.questionInnerContainer{
 			/* background:white; */
-			margin-top:-50px;
+			margin-top:0px;
 			width:100%;
 			display: flex;
 			justify-content: center;
@@ -88,7 +104,7 @@
 			position: relative;
 			
 			.questionController{
-				margin-top:-30px;
+				margin-top:20px;
 				
 			}
 			
@@ -104,95 +120,10 @@
 		flex-direction: column;
 		/* overflow: hidden; */
 		
-		.hostHintContainer{
-			padding-right:300px;
-			box-sizing:border-box;
-			overflow: hidden;
-			position: relative;
-			height:50px;
-			opacity:0;
-			transition: transform 0.3s ease, opacity 0.3s ease 0.1s;
-			transform: translateX(-50px);
-			&.isVisible{
-				opacity:1;
-				transform: translateX(0px);
-			}
-			
-			.answerScoreContainer{
-				position: absolute;
-				right:0px;
-				top:0px;
-				bottom:0;
-				align-items: center;
-				padding-right:20px;
-				transition:all 0.3s ease;
-				padding-left:30px;
-				display: flex;
-				flex-direction: row;
-				background: linear-gradient(to right, #ffffff00, #ffffffff,#ffffffff,#ffffffff,#ffffffff);
-				.answerScore{
-					color:#676767;
-					opacity: 0.5;
-					font-size: 20px;
-				}
-				.playerInAnswer{
-					margin-right:10px;
-					color:#676767;
-					opacity: 1;
-					font-size: 20px;
-				}
-				
-			}
-			&.offsetRight{
-				.answerScoreContainer{
-					padding-right:260px;
-				}
-			}
-			display: block;
-			flex-direction: row;
-			padding:0px 20px 10px 20px;
-			background:#fff;
-			&.grey{
-				background:#f2f2f2;
-				.answerScoreContainer{
-				background: linear-gradient(to right, #f2f2f200, #f2f2f2ff,#f2f2f2ff,#f2f2f2ff,#f2f2f2ff);
-				}
-			}
-			/* margin:3px 0px; */
-			.revealedAnswer{
-				/* width:100000px; */
-				display: inline-block;
-				font-size: 30px;
-				margin-right:4px;
-				max-height:30px;
-
-				padding:5px;
-				line-height: 40px;
-				color:#676767;
-				letter-spacing: 1px;
-				.undiscovered{
-					color:#DB4437
-				}
-			}
-			.hintLetter{
-				height:30px;
-				display: inline-block;
-				font-size: 30px;
-				margin-right:4px;
-				line-height: 30px;
-				padding:5px;
-				width:18px;
-				color:#676767;
-				&.space{
-					margin: 0px 3px;
-				}
-			}
-		}
+		
 	}
 	.undiscovered{
 		color:#DB4437!important;
 	}
-	.playerInAnswer{
-		color:#000;
-	}
+	
 }
