--- a/src/components/ColorText/style.scss
+++ b/src/components/ColorText/style.scss
@@ -4,6 +4,7 @@
 		letter-spacing:0.5px;;
 		padding-bottom:10px;
 		opacity:!important;
+		justify-content: center;
 		.letterTitle{
 			font-size: 100px;
 			font-weight: light!important;
