--- a/src/containers/Host/Question/AnswerRow/style.scss
+++ b/src/containers/Host/Question/AnswerRow/style.scss
@@ -28,6 +28,8 @@
 					color:#676767;
 					opacity: 0.5;
 					font-size: 30px;
+					width:100px;
+					text-align: right;
 				}
 				.playerInAnswer{
 					margin-right:15px;
