--- a/src/components/Player/style.scss
+++ b/src/components/Player/style.scss
@@ -12,117 +12,120 @@
 		height:auto;
 		opacity: 1;
 	}
-.hostPlayerContainer{
-	&.large{
-		margin-top:-150px;
-	}
-	&.hideName{
-		margin-top:0;
-	}
-	position: relative;
-	width:80px;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	align-items: center;
-	
-	.playerCircle{
-		background-size: cover;
-		background-position:center;
-		overflow: hidden;
-		min-width:80px;
+	.hostPlayerContainer{
+		position: relative;
 		width:80px;
-		height:80px;
 		display: flex;
-		align-items: center;
 		justify-content: center;
-		border-radius: 50%;
-		&.disconnected{
-			border:9px solid red;
+		flex-direction: column;
+		align-items: center;
+		&.large{
+			margin-top:-150px;
+		}
+		&.hideName{
+			margin-top:0;
+		}
+		.playerCircle{
+			background-size: cover;
+			background-position:center;
+			overflow: hidden;
+			min-width:80px;
+			width:80px;
+			height:80px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 50%;
+			&.disconnected{
+				border:9px solid red;
+			}
+			&.large{
+				box-shadow: 0 0 20px rgba(0,0,0,0.3);
+				margin-bottom:20px;
+				width:200px;
+				height:200px;
+			}
+			p{
+				color:white;
+				font-size: 40px;
+			}
+			.check{
+				font-size: 65px;
+			}
+		}
+		&.isDisconnected{
+			.name{
+				opacity:0.2;
+			}
+		}
+		.score{
+			color:#000;
+			font-size: 30px;
+			margin-top:-30px;
+		}
+		.name{
+			font-size: 30px;
+			color:#000;
+			font-weight:bold;
+			width:100%;
+			text-align: center;
 		}
 		&.large{
-			box-shadow: 0 0 20px rgba(0,0,0,0.3);
-			margin-bottom:20px;
-			width:200px;
-			height:200px;
-		}
-		p{
-			color:white;
-			font-size: 40px;
-		}
-		.check{
-			font-size: 65px;
+			min-width:150px!important;
+			// margin: 12px 50px;
+			.score{
+				// margin-bottom: 20px;
+			}
 		}
 	}
-	&.isDisconnected{
-		.name{
-			opacity:0.2;
+	&.isScores{
+		.playerCircle{
+			width:150px;
+			height:150px;
 		}
 	}
-	.score{
-		color:#000;
-		font-size: 30px;
-	}
-	.name{
-		font-size: 30px;
-		color:#000;
-		font-weight:bold;
-		width:100%;
-		text-align: center;
-	}
-	&.large{
-		min-width:150px!important;
-		// margin: 12px 50px;
-		.score{
-			// margin-bottom: 20px;
+	.playerDisplayedAnswerContainer{
+		display: flex;
+		align-items:center;
+		justify-content: center;
+		width:200px;
+		margin:0!important;
+		flex-direction: row;
+		.playerDisplayedAnswer{
+			text-align: center;
+			font-size:30px;
+			margin-right: 5px;
+				color:#000;
+			}
+		}
+		.thumbsup{
+			margin-left:5px;
+			font-size:30px;
 		}
 	}
-
-}
-.playerDisplayedAnswerContainer{
-display: flex;
-align-items:center;
-justify-content: center;
-width:200px;
-margin:0!important;
-flex-direction: row;
-.playerDisplayedAnswer{
-	text-align: center;
-	font-size:30px;
-	margin-right: 5px;
-		color:#000;
+	.hostLikesContainer{
+		position:absolute;
+		top:0;
+		left:-25px;
+		min-width:200px;
+		max-width:200px;
+		
+		// background:red;
+		height:200px;
+	.hostLikeContainer{
+		position: absolute;
+		top:0;
+		left:0;
+		width:30px;
+		height:30px;
+		animation-name: like;
+		animation-duration: 0.8s;
+		animation-fill-mode: forwards;
+		.thumbsup{
+			font-size:50px;
+		}
 	}
-}
-.thumbsup{
-	margin-left:5px;
-		font-size:30px;
-	}
-}
-
-.hostLikesContainer{
-	position:absolute;
-	top:0;
-	left:-25px;
-	min-width:200px;
-	max-width:200px;
 	
-	// background:red;
-	height:200px;
-.hostLikeContainer{
-	position: absolute;
-	top:0;
-	left:0;
-	width:30px;
-	height:30px;
-	
-	
-	animation-name: like;
-	animation-duration: 0.8s;
-	animation-fill-mode: forwards;
-	.thumbsup{
-		font-size:50px;
-	}
-}
 }
 
 
@@ -131,11 +134,12 @@ flex-direction: row;
 	width:30px;
 	height:30px;
 	
-	top:0px;
-	left:5px;
+	top:-150px;
+	left:20px;
+	transform:translateY(-50px);
 
 	.coin{
-		font-size:50px;
+		font-size:100px;
 		opacity:0;
 	}
 	.coin1{
@@ -162,7 +166,7 @@ flex-direction: row;
 	&.large{	
 		top:-50px;
 		.coin{
-			font-size:50px;
+			font-size:70px;
 			opacity:0;
 		}
 		.coin1{
