--- a/src/containers/Host/Question/AnswerRow/style.scss
+++ b/src/containers/Host/Question/AnswerRow/style.scss
@@ -28,8 +28,9 @@
 					color:#676767;
 					opacity: 0.5;
 					font-size: 30px;
-					width:100px;
+					min-width:100px;
 					text-align: right;
+					
 				}
 				.playerInAnswer{
 					margin-right:15px;
@@ -52,8 +53,10 @@
 				background:#f2f2f2;
 				.answerScoreContainer{
 				background: linear-gradient(to right, #f2f2f200, #f2f2f2ff,#f2f2f2ff,#f2f2f2ff,#f2f2f2ff);
+
 				}
 			}
+			
 			/* margin:3px 0px; */
 			.revealedAnswer{
 				/* width:100000px; */
@@ -95,7 +98,9 @@
 				}
 			}
 		}
+
 		.playerInAnswer{
 		font-size:30px;
 		color:#000;
 	}
+	
