--- a/src/containers/Host/Question/style.scss
+++ b/src/containers/Host/Question/style.scss
@@ -5,20 +5,23 @@
 	
 	box-sizing:border-box;
 	.countdown{
-		padding:10px;
+		// padding:10px;
 		color:white;
 		background:red;
 		position: fixed;
-		top:10px;
+		top:20px;
 		left:20px;
 		font-weight: extra-light!important;
-		border-radius:30px;
-		margin:10px;
-		
-		font-size:25px;
+		// border-radius:30px;
+		// margin:10px;
+		display: flex;
+		align-items:center;
+		justify-content: center;
+		font-size:30px;
 		transition:background 50s ease;
-		width:158px;
-		padding-left:21px;
+		width:50px;
+		height:50px;
+		
 		&.red{
 			background: #DB4437; 
 		}
